[package]
name = "letterman"
version = "0.0.6"
authors = ["gzbakku <gzbakku@gmail.com>"]
edition = "2018"

description = "this is a light weight grounds up email lib for rust."
homepage = "https://github.com/gzbakku/fdb/tree/master/postoffice"
repository = "https://github.com/gzbakku/fdb/tree/master/postoffice"
readme = "README.md"
keywords = ["smtp","server","client","smtps","esmtp"]
categories = ["web-programming::http-server", "web-programming::http-client", "api-bindings","web-programming::websocket"]
license-file = "License.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
trust-dns-resolver = "0.19.5"
native-tls = "0.2.4"
tokio = { version = "0.2.22", features = ["full"] }

# [dev-dependencies]
# tokio = { version = "0.3.1", features = ["full"] }
