[package]
name = "letterman"
version = "0.2.7"
authors = ["gzbakku <gzbakku@gmail.com>"]
edition = "2018"

description = "this is a grounds up super fast and light weight smtp client and server library you can integrate it into a rust app to manage email transfer natively."
homepage = "https://github.com/gzbakku/letterman"
repository = "https://github.com/gzbakku/letterman"
readme = "README.md"
keywords = ["smtp","server","client","smtps","esmtp"]
categories = ["web-programming::http-server", "web-programming::http-client", "api-bindings","web-programming::websocket"]
license="MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [build]
# target = "x86_64-unknown-linux-musl"

[dependencies]
quoted_printable = "0.4.3"
base64 = "0.13.0"
trust-dns-resolver = "0.20.3"
native-tls = "0.2.8"
tokio = { version = "1.15.0", features = ["full"] }
openssl = "0.10.30"
chrono = "0.4.19"
md5 = "0.7.0"
rustls-pemfile = "0.2.1"
tokio-rustls = "0.23.1"
regex = "1.5.4"
dns-lookup = "1.0.8"
tokio_spf_validator = "1.0.3"
rustque = "1.1.1"
json = "0.12.4"
serde = "1.0.131"
rand = "0.8.4"
sha256 = "1.0.3"
flume = "0.10.9"
tokio-native-tls = "0.3.0"
unique_id = "0.1.3"
new_mime_guess = "4.0.0"
mime = "0.3.16"

letterman_email_body_parser = "1.0.5"
# letterman_email_body_parser = { path = "../letterman_email_body_parser" }

# [dev-dependencies]
# tokio = { version = "0.3.1", features = ["full"] }

# letterman_email_body_parser = "1.0.5"
